--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "main": "index.js",
+  "proxy": "http://ec2-34-245-52-7.eu-west-1.compute.amazonaws.com:3000",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -7,6 +8,8 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.4",
+    "@react-navigation/native-stack": "^6.2.2",
     "expo": "~41.0.1",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
@@ -17,9 +20,14 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area": "^0.5.1",
-    "react-native-screens": "^3.0.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.0.0",
     "react-native-unimodules": "~0.13.3",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@expo/webpack-config": "^0.16.2"
+  }
 }
