--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-screens": "~3.0.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.14.1",
     "react-navigation": "^4.4.4"
   },
   "private": true,
