--- a/app.json
+++ b/app.json
@@ -8,6 +8,9 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "description": ""
+    "description": "",
+    "android": {
+      "package": "EV.Core"
+    }
   }
 }
