--- a/app.json
+++ b/app.json
@@ -1,9 +1,9 @@
 {
-  "name": "EVCore",
-  "displayName": "EVCore",
+  "name": "mobile",
+  "displayName": "mobile",
   "expo": {
-    "name": "EVCore",
-    "slug": "EVCore",
+    "name": "mobile",
+    "slug": "mobile",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
