--- a/package.json
+++ b/package.json
@@ -1,36 +1,35 @@
 {
+  "name": "mobile",
+  "version": "1.0.0",
   "main": "index.js",
-  "proxy": "http://ec2-34-245-52-7.eu-west-1.compute.amazonaws.com:3000",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "start": "react-native start"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/native": "^6.0.4",
-    "@react-navigation/native-stack": "^6.2.2",
-    "expo": "~41.0.1",
-    "expo-location": "~12.0.4",
-    "expo-splash-screen": "~0.10.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.5.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
+    "expo": "~43.0.2",
+    "expo-dev-client": "^0.6.3",
+    "expo-location": "~13.0.4",
+    "expo-splash-screen": "~0.13.5",
+    "expo-status-bar": "~1.1.0",
+    "expo-updates": "~0.10.13",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-reanimated": "~2.1.0",
-    "react-native-safe-area": "^0.5.1",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.0.0",
-    "react-native-unimodules": "~0.13.3",
-    "react-native-web": "~0.13.12",
-    "react-native-webview": "^11.14.1",
-    "react-navigation": "^4.4.4"
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
+    "react-native-web": "0.17.1",
+    "react-native-webview": "^11.14.3"
   },
-  "private": true,
   "devDependencies": {
-    "@expo/webpack-config": "^0.16.2"
-  }
+    "@babel/core": "^7.12.9"
+  },
+  "private": true
 }
