--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,27 +18,28 @@ publish: &publish
     - run:
         name: Publish Android to Expo
         no_output_timeout: 30m
-        command: npx expo-cli build:android -t $TARGET --non-interactive #--release-channel $EXPO_RELEASE_CHANNEL
+        command: npx expo-cli build:android -t $TARGET_ANDROID --non-interactive #--release-channel $EXPO_RELEASE_CHANNEL
         
     - run:
         name: Publish IOS to Expo
         no_output_timeout: 30m
-        command: npx expo-cli build:ios -t $TARGET --non-interactive #--release-channel $EXPO_RELEASE_CHANNEL
+        command: npx expo-cli build:ios -t $TARGET_IOS --non-interactive #--release-channel $EXPO_RELEASE_CHANNEL
 
 jobs:
-  publish_android_to_expo:
+  publish_android_and_ios_to_expo:
     environment:
-      TARGET: apk
+      TARGET_ANDROID: apk
+      TARGET_IOS: simulator
     <<: *publish
 
-  publish_ios_to_expo:
-    environment:
-      TARGET: simulator
-    <<: *publish
+  #publish_ios_to_expo:
+  #  environment:
+  #    TARGET: simulator
+  #  <<: *publish
 
 workflows:
   version: 2
   mobile_app:
     jobs:
-      - publish_android_to_expo
+      - publish_android_and_ios_to_expo
       #- publish_ios_to_expo
