--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,17 +13,17 @@ publish: &publish
 
     - run:
         name: Login into Expo
-        command: npx expo-cli login -u $EXPO_USERNAME -p $EXPO_PASSWORD
+        command: eas login -u $EXPO_USERNAME -p $EXPO_PASSWORD
 
     - run:
         name: Publish Android to Expo
         no_output_timeout: 30m
-        command: npx expo-cli build:android -t $TARGET_ANDROID --non-interactive #--release-channel $EXPO_RELEASE_CHANNEL
+        command: eas build:android -t $TARGET_ANDROID --non-interactive #--release-channel $EXPO_RELEASE_CHANNEL
         
     - run:
         name: Publish IOS to Expo
         no_output_timeout: 30m
-        command: npx expo-cli build:ios -t $TARGET_IOS --non-interactive #--release-channel $EXPO_RELEASE_CHANNEL
+        command: eas build:ios -t $TARGET_IOS --non-interactive #--release-channel $EXPO_RELEASE_CHANNEL
 
 jobs:
   publish_android_and_ios_to_expo:
@@ -32,14 +32,8 @@ jobs:
       TARGET_IOS: simulator
     <<: *publish
 
-  #publish_ios_to_expo:
-  #  environment:
-  #    TARGET: simulator
-  #  <<: *publish
-
 workflows:
   version: 2
   mobile_app:
     jobs:
       - publish_android_and_ios_to_expo
-      #- publish_ios_to_expo
